--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Minecraft Clicker — Crafting fix (licenças)</title>
+<title>Minecraft Clicker</title>
 <style>
   /* ---------- Estilos (mantidos + leves ajustes) ---------- */
   :root{
@@ -76,7 +76,7 @@
 <body>
 
 <header>
-  <div class="title">⛏ Minecraft Clicker — Corrigido: Crafting & Licenças</div>
+  <div class="title">⛏ Minecraft Clicker </div>
   <div class="nav">
     <button id="btnSave" class="btn">💾 Salvar</button>
     <button id="btnReset" class="btn">♻ Reset</button>
@@ -104,7 +104,7 @@
 
       <!-- Crafting -->
       <div style="margin-top:14px">
-        <h3>Crafting (3×3) — arraste imagens</h3>
+        <h3>Crafting (3×3)</h3>
         <div class="crafting-area">
           <div>
             <div class="craft-grid" id="craftGrid"></div>
